# pytradesimulator

./: .flake8  .gitignore  .python-version  LICENSE  README.rst  pyproject.toml
.github/workflows/: build.yaml
pytradesim/: broker.py  client.py  market_client.py  market_data.py  orderbook.py  server.py
pytradesim/configs/: client1.cfg  client2.cfg  exchange.cfg  mdclient1.cfg  mdclient2.cfg  price.cfg
pytradesim/modules/: broker.py  broker2.py  client.py  instrument.py  orderbook.py  utils.py
pytradesim/modules/market/: client.py  mda.py  utils.py
tests/: benchmark.py  test_instrument.py  test_orderbook.py  test_pytradesim.py
