[tool.poetry]
name = "pytradesim"
version = "0.1.0"
description = ""
authors = ["Abhishek Guha <abhi.workspace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
quickfix = "^1.15.1"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
