[tool.poetry]
name = "pytradesim"
version = "0.1.3"
description = "A python package to simulate trading exchange"
authors = ["Abhishek Guha <abhi.workspace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
quickfix = "^1.15.1"
click = "^7.1.1"
docutils = "^0.16"
pytest = "^5.4.1"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
